sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:34: error: identifier expected but integer literal found.
            si liste[i] > liste[i + 1]
                                    ^AlgCocktailSort2:52: error: ']' expected but '}' found.
}
^AlgCocktailSort2:34: error: type application is not allowed for postfix operators
            si liste[i] > liste[i + 1]
                          ^