sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.code
def cocktailSort2() {
  var inversion = true;
  var debut = 0 ; 
  var fin = getNombreValeurs() - 2;
  do {
    inversion = false;
    for (i<- debut to fin) {
      if (plusPetit(i+1,i)) {
        echange(i,i+1);
        inversion = true;
      }
    }
    fin = fin - 1;
    for (i<- fin to debut by -1) {
      if (plusPetit(i+1,i)) {
        echange(i,i+1);
        inversion = true;
      }
    }
    debut = debut + 1;
  } while (inversion);
}


fonction tri_cocktail (array liste)
    ?chang?  := vrai
    d?but := 0
    fin = liste.taille - 2
    R?p?ter tant que ?chang? = vrai
        ?chang? := faux
        
         R?p?ter pour tout  i entre d?but et fin
            si liste[i] > liste[i + 1]
                [[Echanger (liste[i], liste[i+1])
                ?chang?  := vrai
            fin si
         fin R?p?ter
        fin  := fin - 1
        R?p?ter pour tout  i (d?croissant) entre fin et d?but
            si liste[i] > liste[i + 1]
                [[Echanger (liste[i], liste[i+1])
                ?chang?  := vrai
            fin si
         fin R?p?ter         
        d?but  := d?but + 1
    fin tant que
 fin fonction
